# thundergolfer.github.io

./: .cursorrules  .gitignore  CNAME  DEVELOPMENT.md  Gemfile  README.md  _config.yml  about.md  browserconfig.xml  feed.xml  index.md  manifest.json  portfolio.html  resume.md  trial.html
.bundle/: config
_data/: antilibrary.yaml  books.yaml  goodreads_library_export.csv  library.yaml
_drafts/: 2016-11-10-learning-large-open-source-codebases.md  2016-11-16-state-of-machine-learning.md  2017-07-07-a-foundational-result-in-machine-learning.md  2017-10-12-getting-into-ML.md  2017-11-05-newsfeeds-and-information-filters.md  2018-01-12-fake-news-and-nlp-stupidity.md  2018-01-20-internet-identity-and-self-formation.md  2018-10-05-source-rank.md  2018-16-02-do-everything-yourself-development.md
_includes/: footer.html  head.html  header.html  navigation.html  pagination.html  post_footer.html  social_links.html  subscribe.html
_layouts/: about.html  center.html  cv.html  default.html  default_design.html  post.html
_portfolio/: 2002-06-01-high-school-art-portfolio.markdown  2007-05-01-lego-chess-robot.markdown  2007-06-01-jpmorgan-webrs-monitoring-tool.markdown  2007-09-01-jpmorgan-trade-capture-islamic-murabaha.markdown  2007-11-01-jpmorgan-risk-pnl-spreadsheets.markdown  2009-09-01-silentweshout.markdown  2010-02-01-john-carlton-blog.markdown  2011-02-01-rew-ca-website.markdown  2011-07-01-vintage-fashion-guide-ios-app.markdown  (+34 more)
tools/: download_book_covers.py  general_position_visualizations.py  pyproject.toml  sync_notion_blog_posts.py  update_books_data.py
(+201 files in other folders)
