[tool.poetry]
name = "tooling"
version = "0.1.0"
description = "Package containing tooling code."
authors = ["Jonathon Belotti <jonathon.i.belotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
manim = "0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.2.1"
black = "^20.8b1"


[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
